# filepack

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci-jobs.yaml
archive/: archive.py  exceptions.py  models.py
archive/archives/: rar.py  seven_zip.py  tar.py  zip.py
src/archive/: archive.py  models.py  utils.py
src/archive/archives/: rar.py  seven_zip.py  tar.py  zip.py
src/filepack/: __main__.py  archive.py  compression.py  consts.py  filepack.py  utils.py
src/filepack/archives/: models.py  rar.py  seven_zip.py  tar.py  zip.py
src/filepack/compressions/: bzip2.py  exceptions.py  gzip.py  lz4.py  models.py  xz.py
tests/: conftest.py  test_archive.py  test_compression.py  test_filepack.py
tests/archive_examples/: archive.tar
tests/archives/: test_rar.py  test_seven_zip.py  test_tar.py  test_zip.py
tests/archives/archive_examples/: archive.7z  archive.tar
tests/compressions/: test_bzip2.py  test_gzip.py  test_lz4.py  test_xz.py
tests/compressions/compression_examples/: compression_bzip2.txt.bz2  compression_lz4.txt.lz4  compression_xz.txt.xz
