[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filepack"
version = "0.1.0"
description = ""
authors = [
    { name = "Dan Manor", email = "danmanor11@gmail.com" }
]
keywords = ["file", "pack", "unpack", "archive", "compression", "compressor"]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
"Repository" = "https://github.com/danmanor/archive"
"Bug Tracker" = "https://github.com/danmanor/archive/issues"

[options]
packages = ["filepack"]
install_requires = [
    "py7zr>=0.20.6",
    "tabulate==0.9.0",
    "rarfile==4.1",
    "pytz==2023.3.post1",
    "lz4==4.3.2",
]
python_requires = ">=3.10"

[options.extras_require]
dev = [
    "pytest",
    "mypy",
    "black",
    "flake8"
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
show_error_codes = true

[tool.black]
line-length = 70
target-version = ['py310']  
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 70

[tool.flake8]
ignore = ['E501']
