[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "filepack"
version = "0.1.0"
description = ""
requires-python=">=3.11.0"
authors = [
    { name = "Dan Manor", email = "danmanor11@gmail.com" }
]
keywords = ["file", "pack", "unpack", "archive", "compression", "compressor"]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "py7zr>=0.20.6",
    "tabulate==0.9.0",
    "rarfile==4.1",
    "pytz==2023.3.post1",
    "lz4==4.3.2",
]

[project.urls]
"Repository" = "https://github.com/danmanor/archive"
"Bug Tracker" = "https://github.com/danmanor/archive/issues"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
show_error_codes = true

[tool.black]
line-length = 70
target-version = ['py311']  
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 70

[tool.flake8]
ignore = ['E501']
