[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "filepack"
version = "0.1.0"
description = ""
requires-python=">=3.11.0"
authors = [
    { name = "Dan Manor", email = "danmanor11@gmail.com" }
]
keywords = ["file", "pack", "unpack", "archive", "compression", "compressor"]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "py7zr>=0.20.6",
    "tabulate==0.9.0",
    "types-tabulate==0.9.0.3",
    "rarfile==4.1",
    "pytz==2023.3.post1",
    "types-pytz==2023.3.1.1",
    "lz4==4.3.2",
    "filetype==1.2.0",
]

[project.urls]
"Repository" = "https://github.com/danmanor/archive"
"Bug Tracker" = "https://github.com/danmanor/archive/issues"

[project.optional-dependencies]
test-runner = [
    "tox==4.11.3",
]
test = [
    "pytest==7.4.2",
]
lint = [
    "black==23.9.1",
    "isort==5.12.0",
    "mypy==1.5.1",
    "flake8==6.1.0",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
show_error_codes = true

[tool.black]
line-length = 70
target-version = ['py311']  
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 70

[tool.flake8]
ignore = ['E501']

[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py311

    [testenv]
    usedevelop=True
    commands = pytest tests
    deps = .[test]
"""
